<resources>
    <string name="app_name">pgLoaderRetrofit</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_retrieve">Fetch</string>
    <string name="txt_Name">Username : </string>
    <string name="txt_Email">Email : </string>
    <string name="txt_Phone">Phone : </string>
    <string name="error_message_no_connection">Connection Error</string>

</resources>
